# trnsys-dck-parser

./: .gitignore  LICENSE  README.md  dev-requirements.in  dev-requirements.txt  pylintrc  pyproject.toml  setup.py
.github/workflows/: test.yml
requirements/: dev-requirements.in  dev-requirements.txt  dev.in  dev.txt
src/trnsys_dck_parser/: __init__.py  build.py  common.py  deck.py  expression.py
src/trnsys_dck_parser/deck/: __init__.py  expression.py
src/trnsys_dck_parser/model/: __init__.py  deck.py  equations.py  expression.py
src/trnsys_dck_parser/parse/: common.py  deck.py  equations.py  expression.py  tokens.py
src/trnsys_dck_parser/parse/expression/: __init__.py  parse.py  tokenize.py
src/trnsys_dck_parser/util/: __init__.py  expression.py
test/decks/does_not_parse/: multi_line_epxression.dck
test/test_trnsys_dck_parser/: test_equations.py  test_expression.py
test/test_trnsys_dck_parser/parse/: test_expression.py
test/trnsys_dck_parser/: test_parser.py
